Fixed links align

--- a/src/components/LinkBlockchain.styl
+++ b/src/components/LinkBlockchain.styl
@@ -1,7 +1,8 @@
 .icon {
-  height: 24px
+  height: 22px
 }
 
 .link {
-  line-height: 1;
+  position: relative;
+  top: 1px;
 }
